# socitwin

./: .env.example  .gitattributes  .gitignore  3.py  AGENTS.md  CHANGELOG_v1.1.0.md  DESIGN.md  DEVELOPER_MANUAL.md  FINAL_COMPREHENSIVE_CHECK_REPORT.md  FRONTEND_SCREENSHOTS_VERIFICATION.md  INSTALL_AND_CONFIG_MANUAL.md  LICENSE  PR_DESCRIPTION.md  README.md  Topics-Clustering.py  V1.1.0_FILE_CHECKLIST.md  analyze_agent_behavior.py  fetch_twitter_data.py  index.html  oasis_engine.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  real_oasis_engine_v2.py  requirements.txt  server.ts  skills-lock.json  test_force_create.py  verification_summary.md  vite.config.ts
backend/: .env.example  main.py  pyproject.toml
backend/LLaMA-Factory-main/: chatnlp.yaml  merge_qwen_best.yaml  start.bat  trainnlp.yaml
backend/LLaMA-Factory-main/data/: dataset_info.json
backend/LLaMA-Factory-main/out_cp/: README.md  adapter_model.safetensors  all_results.json  trainer_log.jsonl  trainer_state.json
backend/LLaMA-Factory-main/out_cp/checkpoint-1000/: adapter_model.safetensors  scaler.pt  scheduler.pt  trainer_state.json
backend/LLaMA-Factory-main/out_cp/checkpoint-1500/: README.md  adapter_model.safetensors  trainer_state.json
backend/LLaMA-Factory-main/out_cp/checkpoint-2000/: adapter_model.safetensors  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
backend/LLaMA-Factory-main/out_cp/checkpoint-2500/: scaler.pt  scheduler.pt  trainer_state.json
backend/LLaMA-Factory-main/out_cp/checkpoint-500/: adapter_model.safetensors  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
backend/LLaMA-Factory-main/out_nlp/: README.md  adapter_config.json  train_results.json  trainer_log.jsonl  trainer_state.json
backend/LLaMA-Factory-main/out_nlp/checkpoint-1000/: adapter_model.safetensors  rng_state.pth  scaler.pt  trainer_state.json
backend/LLaMA-Factory-main/out_nlp/checkpoint-1500/: adapter_model.safetensors  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
backend/LLaMA-Factory-main/out_nlp/checkpoint-2000/: adapter_model.safetensors  rng_state.pth  scaler.pt  trainer_state.json
backend/LLaMA-Factory-main/out_nlp/checkpoint-2500/: adapter_model.safetensors  rng_state.pth  scaler.pt  trainer_state.json
backend/LLaMA-Factory-main/out_nlp/checkpoint-500/: adapter_model.safetensors  rng_state.pth  scaler.pt  trainer_state.json
backend/app/: __init__.py
backend/app/api/: behavior.py  controlled_agents.py  metrics.py  person_dataset.py  persona.py  proxy.py  simulation.py  topics.py
backend/app/core/: agent_generator.py  agent_profiles.py  behavior_controller.py  config.py  dependencies.py  llm_evaluator.py  oasis_manager.py  probabilistic_engine.py  rule_engine.py  scheduling_engine.py  simulation_events.py  topic_loader.py
backend/app/memory/: __init__.py  action_capabilities.py  action_evidence.py  action_significance.py  agent.py  budget_recovery.py  config.py  consolidator.py  environment.py  episodic_memory.py  evaluation_harness.py  longterm.py  memory.py  memory_rendering.py  observation_policy.py  observation_rendering.py  observation_semantics.py  observation_shaper.py  prompt_assembler.py  recall_planner.py  retrieval_policy.py  runtime.py  runtime_failures.py  tokens.py  working_memory.py
backend/app/models/: agent_monitor.py  behavior.py  controlled_agents.py  metrics.py  proxy.py  simulation.py  topics.py
backend/app/services/: __init__.py  agent_monitor_service.py  controlled_agents_service.py  dataset_service.py  proxy_service.py  simulation_service.py  topic_service.py
backend/app/services/metrics/: __init__.py  herd_effect_service.py  metrics_manager.py  polarization_service.py  (+2 more)
backend/app/utils/: __init__.py  db_init.py  exporters.py  metrics_db.py  templates.py
backend/config/: topics.yaml
backend/examples/behavior_profiles/: README.md  mixed_influencer_strategy.yaml  probabilistic_balanced_twitter.yaml  rule_based_customer_support.yaml  rule_based_probabilistic_twitter.yaml  scheduled_marketing_campaign.yaml  scheduled_probabilistic_twitter.yaml
backend/scripts/datasets/: fetch_facebook_data.py  fetch_instagram_data.py  fetch_reddit_data.py  fetch_twitter_data.py
backend/test/: e2e_simulation_test.py  run_tests.sh  test_config_endpoint.py  test_config_manual.py
backend/tests/e2e/: e2e_simulation_test.py  run_tests.sh  test_config_endpoint.py  test_config_manual.py
backend/tests/unit/: test_behavior_models.py  test_probabilistic_engine.py  test_rule_engine.py  test_scheduling_engine.py  test_settings.py
backend/topic_polarization/Output/: requirements.txt  topic_polarization_chart.html
backend/topic_polarization/core/: _init_.py  database.py  visualizer.py
public/: robots.txt  (+2 more)
x_experiment/: .env.example  pyproject.toml
x_experiment/prompts/: templates.yaml
x_experiment/scripts/: contrarian_agent.py  database.py  live_contrarian_agent.py  llm_analyzer.py  prompt_loader.py  requirements.txt  x_publisher.py
(+507 files in other folders)
