[project]
name = "oasis-dashboard"
version = "1.1.0"
description = "OASIS Dashboard - A monitoring and management dashboard for OASIS framework"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "camel-oasis>=0.2.0",
    "neo4j>=5.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oasis_dashboard"]

[dependency-groups]
dev = []
